objects/BU_plan_Scorecard__c.object
<CustomObject>
    <fields>
        <fullName>Avg__c</fullName>
        <formula>(Q1__c  +  Q2__c  +  Q3__c + Q4__c + Q5__c )/ 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Plan_Additional_comments__c</fullName>
        <label>BU Plan Additional comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_plan_Answer_1__c</fullName>
        <label>BU plan Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>5 – Yes, the plan shows thorough understanding of the customer&apos;s current business, future direction, and the plan has been validated with the customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 – Yes, the plan shows thorough understanding of the customer&apos;s current business priorities and future direction.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 – Yes, the plan shows current, relevant business knowledge of the customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 – Yes, the plan shows limited, current, and relevant business knowledge of customer.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1- No, the plan does not show current, relevant business knowledge of customer.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_plan_Answer_2__c</fullName>
        <label>BU plan Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_plan_Answer_3__c</fullName>
        <label>BU plan Answer 3</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree or Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BU_plan_Comments_1__c</fullName>
        <label>BU plan Comments 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BU_plan_Comments_2__c</fullName>
        <label>BU plan Comments 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BU_plan_Comments_3__c</fullName>
        <label>BU plan Comments 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Plan__c</fullName>
        <label>Business Unit Plan</label>
        <referenceTo>Business_Unit_Plan__c</referenceTo>
        <relationshipLabel>BU plan Scorecards</relationshipLabel>
        <relationshipName>BU_plan_Scorecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <formula>CASE( BU_plan_Answer_1__c, 
&quot;5 – Yes, the plan shows thorough understanding of the customer&apos;s current business, future direction, and the plan has been validated with the customer.&quot;, 5, 
&quot;4 – Yes, the plan shows thorough understanding of the customer&apos;s current business priorities and future direction.&quot;,4, 
&quot;3 – Yes, the plan shows current, relevant business knowledge of the customer.&quot;,3, 
&quot;2 – Yes, the plan shows limited, current, and relevant business knowledge of customer.&quot;,2, 
&quot;1- No, the plan does not show current, relevant business knowledge of customer.&quot;,1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <formula>CASE( BU_plan_Answer_2__c, 
&quot;5 - Strongly Agree&quot;, 5, 
&quot;4 - Agree&quot;,4, 
&quot;3 - Neither Agree or Disagree&quot;,3, 
&quot;2 - Disagree&quot;,2, 
&quot;1 - Strongly Disagree&quot;,1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <formula>CASE( BU_plan_Answer_3__c, 
&quot;5 - Strongly Agree&quot;, 5, 
&quot;4 - Agree&quot;,4, 
&quot;3 - Neither Agree or Disagree&quot;,3, 
&quot;2 - Disagree&quot;,2, 
&quot;1 - Strongly Disagree&quot;,1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BU plan Scorecard</label>
    <nameField>
        <displayFormat>Score-{00000}</displayFormat>
        <label>BU plan Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BU plan Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>